# cata-mapgen-editor

./: CMakeLists.txt  CMakePresets.json  Makefile  README.md
src/editor/: CMakeLists.txt
src/editor/common/: algo.cpp  algo.h  bool.cpp  bool.h  canvas_2d.h  canvas_2d_serde.h  color.h  common_impl.cpp  int_range.h  map_key.h  math.h  sprite_ref.h  timestamp.cpp  timestamp.h  uuid.h  weighted_list.h  weighted_list_serde.h
src/editor/mapgen/: canvas_snippet.cpp  canvas_snippet.h  loot_designer.cpp  loot_designer.h  map_key_gen.cpp  map_key_gen.h  mapgen.cpp  mapgen.h  mapgen2.cpp  mapobject.cpp  mapobject.h  palette.cpp  palette.h  palette_import.cpp  palette_import_report.h  palette_making.cpp  palette_making.h  palette_view.cpp  palette_view.h  palette_view_simple.cpp  palette_view_verbose.cpp  palette_window.cpp  palette_window.h  palette_window_simple.cpp  palette_window_verbose.cpp  piece.cpp  piece.h  piece_impl.cpp  piece_impl.h  piece_type.h  selection_mask.cpp  selection_mask.h  setmap.cpp  setmap.h  setmap_impl.cpp  setmap_impl.h
src/editor/project/: menu_bar.cpp  menu_bar.h  new_mapgen.cpp  new_mapgen.h  new_palette.cpp  new_palette.h  project.cpp  project.h  project_export.cpp  project_export.h  project_serde.cpp  project_serde.h
src/editor/runtime/: app.cpp  app.h  editor_engine.cpp  editor_engine.h  title_screen.cpp  title_screen.h  welcome_screen.cpp  welcome_screen.h
src/editor/state/: control_state.cpp  control_state.h  history_state.cpp  history_state.h  save_export_state.cpp  save_export_state.h  state.cpp  state.h  (+6 more)
src/imgui/: CMakeLists.txt
(+104 files in other folders)
